--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,5 +13,12 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
+- task: DotNetCoreCLI@2
+  inputs:
+    command: test
+    projects: '**/*Tests/*.csproj'
+    arguments: '--configuration $(buildConfiguration)'
+
+steps:
   - script: dotnet build --configuration $(buildConfiguration)
     displayName: 'dotnet build --configuration $(buildConfiguration)'
